--- a/src/app/pages/PropertyDetails/amenities-section/amenities-section.component.html
+++ b/src/app/pages/PropertyDetails/amenities-section/amenities-section.component.html
@@ -12,7 +12,7 @@
                       Airbnb,according to guests
                   </div>
         </div>
-        <div class="guest-reviews-summary d-flex align-items-center">
+        <div class="guest-reviews-summary d-flex align-items-center col-3 ">
             <div class="rating d-flex align-items-center gap-1">
                 <div class="stars" aria-label="Rating out of 5 stars">
                     <i class="bi bi-star-fill"></i>
