--- a/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.html
+++ b/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.html
@@ -107,7 +107,7 @@
 
     
     </div>
-         <button type="su" class="check-btn" [disabled]="!checkInDate || !checkOutDate " (click)="checkAvailabilityForSelectedRange()">
+         <button *ngIf="!isPreview" type="su" class="check-btn" [disabled]="!checkInDate || !checkOutDate " (click)="checkAvailabilityForSelectedRange()">
           Reserve
         </button>  
         <!-- If available -->
