Dashboard Property sort

--- a/src/app/pages/admin/pages/property/property.html
+++ b/src/app/pages/admin/pages/property/property.html
@@ -73,6 +73,7 @@
   <!-- Users Table -->
   <div class="table-section">
     <app-table
+      [currentSort]="currentSort"
       [columns]="columns"
       [data]="properties"
       [actions]="actions"
