--- a/src/app/pages/property-info/property-info.html
+++ b/src/app/pages/property-info/property-info.html
@@ -3,7 +3,7 @@
 
 <div class="container-lg d-flex flex-column">
 
-  <div class="property-details-box mt-2 d-flex justify-content-between ">
+  <div class="property-details-box mt-2 d-flex justify-content-between flex-wrap ">
     <div class="d-flex flex-column ">
       <div class="col-md-12">
         <!-- property info, description, amenities, etc. -->
