--- a/src/app/pages/admin/table/table.css
+++ b/src/app/pages/admin/table/table.css
@@ -211,6 +211,50 @@
   display: inline-block;
   min-width: 60px;
 }
+.status-pending {
+  color: #c7cd09;
+  font-weight: 600;
+  background-color: #fbfbf6;
+  border: 1px solid #f5c6cb;
+  border-radius: 12px;
+  padding: 2px 8px;
+  font-size: 12px;
+  text-align: center;
+  display: inline-block;
+  min-width: 60px;
+}
+.status-accepted {
+  color: #28a745;
+  font-weight: 600;
+  background-color: #d4edda;
+  border: 1px solid #dafbb8;
+  border-radius: 12px;
+  padding: 2px 8px;
+  font-size: 12px;
+  text-align: center;
+  display: inline-block;
+  min-width: 60px;
+}
+.status-rejected {
+  color: #dc3545;
+  font-weight: 600;
+  background-color: #fd9fa7;
+  border: 1px solid #f5c6cb;
+  border-radius: 12px;
+  padding: 2px 8px;
+  font-size: 12px;
+  text-align: center;
+  display: inline-block;
+  min-width: 60px;
+}
+/* case 'accepted':
+        return '#28a745';
+      case 'pending':
+        return '#ffc107';
+      case 'rejected':
+        return '#dc3545';
+      case 'confirmed':
+        return '#17a2b8'; */
 
 .dark-mode .status-active {
   background-color: rgba(40, 167, 69, 0.2);
